<resources>
    <string name="app_name">AppPizzaCalificada</string>
    <string name="tipo_de_pizza">Tipo de Pizza</string>
    <string name="tipo_de_masa">Tipo de masa</string>
    <string name="complementos">Complementos</string>
    <string name="direccion_envio">Dirección de envío</string>
    <string name="ordenar">Ordenar</string>

    <string-array name="android_layout_arrays">
        <item>Americana</item>
        <item>Peperoni</item>
        <item>Hawaiana</item>
        <item>Meat Lover</item>

    </string-array>


</resources>
